--- a/css/project.css
+++ b/css/project.css
@@ -78,3 +78,13 @@ h4 {
 	clear:both;
 	height: 60px;
 }
+
+
+@media (max-width: 460px) {
+	.resize-phone{
+		font-size: 14px !important;
+	}
+	.nopadding-phone {
+		padding: 0 !important;
+	}
+}
